welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
	while (!fonctiontest()) {
               ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:12: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:14: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:19: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:21: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:21: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:24: warning: enclosing method fonctiontest has result type Unit: return value discarded
    return false
    ^